--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ streamlit = "^1.40.1"
 prisma = "^0.15.0"
 colorama = "^0.4.6"
 python-dotenv = "^1.0.1"
+streamlit-local-storage = "^0.0.25"
 
 [build-system]
 requires = ["poetry-core"]
