--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["BlazzByte <nrwrntemporal2@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 streamlit = "^1.40.1"
 prisma = "^0.15.0"
 colorama = "^0.4.6"
 python-dotenv = "^1.0.1"
 streamlit-local-storage = "^0.0.25"
+langchain-openai = "^0.2.9"
+langchain-chroma = "^0.1.4"
+langchain-community = "^0.3.7"
 
 [build-system]
 requires = ["poetry-core"]
