--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ streamlit-local-storage = "^0.0.25"
 langchain-openai = "^0.2.9"
 langchain-chroma = "^0.1.4"
 langchain-community = "^0.3.7"
+sqlalchemy = "2.0.35"
 
 [build-system]
 requires = ["poetry-core"]
