--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ langchain-openai = "^0.2.9"
 langchain-chroma = "^0.1.4"
 langchain-community = "^0.3.7"
 sqlalchemy = "2.0.35"
+google-search-results = "^2.4.2"
 
 [build-system]
 requires = ["poetry-core"]
