--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ langchain-chroma = "^0.1.4"
 langchain-community = "^0.3.7"
 sqlalchemy = "2.0.35"
 google-search-results = "^2.4.2"
+langchain-cohere = "^0.3.2"
 
 [build-system]
 requires = ["poetry-core"]
