--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ colorama = "^0.4.6"
 python-dotenv = "^1.0.1"
 streamlit-local-storage = "^0.0.25"
 langchain-openai = "^0.2.9"
-langchain-chroma = "^0.1.4"
 langchain-community = "^0.3.7"
 sqlalchemy = "2.0.35"
 google-search-results = "^2.4.2"
-langchain-cohere = "^0.3.2"
 beautifulsoup4 = "^4.12.3"
+docx2txt = "^0.8"
+pdfplumber = "^0.11.4"
 
 [build-system]
 requires = ["poetry-core"]
