--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,6 @@ pdfplumber = "^0.11.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.package]
 package-mode = false
