setting up the multi-lingual interface

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,3 +3,6 @@ primaryColor="#4A90E2"
 backgroundColor="#111111"
 secondaryBackgroundColor="#252525"
 textColor="#FEFEFE"
+
+[server]
+maxUploadSize = 3
