--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,36 +1,36 @@
 {
-    "name": "MultimodalChat",
-    // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
-    "customizations": {
-      "codespaces": {
-        "openFiles": [
-          "README.md",
-          "Home.py"
-        ]
-      },
-      "vscode": {
-        "settings": {},
-        "extensions": [
-          "ms-python.python",
-          "ms-python.vscode-pylance",
-          "PKief.material-icon-theme",
-          "saoudrizwan.claude-dev",
-          "qwtel.sqlite-viewer"
-        ]
-      }
+  "name": "MultimodalChat",
+  "image": "mcr.microsoft.com/vscode/devcontainers/python:3.11",
+  "customizations": {
+    "codespaces": {
+      "openFiles": [
+        "README.md",
+        "app.py"
+      ]
     },
-    "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f requirements.txt ] && pip3 install --user -r requirements.txt; pip3 install --user streamlit; echo '✅ Packages installed and Requirements met'",
-    "postAttachCommand": {
-      "server": "streamlit run Home.py --server.enableCORS false --server.enableXsrfProtection false"
-    },
-    "portsAttributes": {
-      "8501": {
-        "label": "Application",
-        "onAutoForward": "openPreview"
-      }
-    },
-    "forwardPorts": [
-      8501
-    ]
-  }
+    "vscode": {
+      "settings": {},
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance",
+        "PKief.material-icon-theme",
+        "saoudrizwan.claude-dev",
+        "qwtel.sqlite-viewer"
+      ]
+    }
+  },
+  "updateContentCommand": "[ -f packages.txt ] && sudo apt update && sudo apt upgrade -y && sudo xargs apt install -y <packages.txt; [ -f pyproject.toml ] && poetry install; echo '✅ Packages installed and Requirements met'",
+  "postCreateCommand": "pip install poetry && poetry install",
+  "postAttachCommand": {
+    "server": "streamlit run app.py --server.enableCORS false --server.enableXsrfProtection false"
+  },
+  "portsAttributes": {
+    "8501": {
+      "label": "Application",
+      "onAutoForward": "openPreview"
+    }
+  },
+  "forwardPorts": [
+    8501
+  ]
+}
