--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#4A90E2"
+primaryColor="#ffa500"
 backgroundColor="#111111"
 secondaryBackgroundColor="#252525"
 textColor="#FEFEFE"
