--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ version = "0.1.0"
 description = ""
 authors = ["BlazzByte <nrwrntemporal2@gmail.com>"]
 readme = "README.md"
+packages = []
 
 [tool.poetry.dependencies]
 python = "^3.10"
 streamlit = "^1.40.1"
 colorama = "^0.4.6"
 python-dotenv = "^1.0.1"
-streamlit-local-storage = "^0.0.25"
 langchain-openai = "^0.2.9"
 langchain-community = "^0.3.7"
 sqlalchemy = "2.0.35"
@@ -22,6 +22,3 @@ pdfplumber = "^0.11.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[tool.poetry.package]
-package-mode = false
